--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -1,10 +1,9 @@
 ---
 layout: default
-img: dog.png
+img: panorama.png
 category: Services
-title: 3D Device Mockups<br>by PSDCovers
+title: GPU-Accelerated High-Resolution Image Stitching
 description: |
 ---
-  Turn your 2D designs into high quality, 3D
-  product shots in seconds using free Photoshop actions by [PSDCovers](http://www.psdcovers.com/)! Visit
-  their website to download some of their awesome, free photoshop actions!
+  CUDA implementation for state-of-the-art image stitching algorithm
+  [Website](https://yhmtsai.github.io/GPU-accelerated-Natural-Image-Stitching-with-Global-Similarity-Prior/) [Paper](https://ieeexplore.ieee.org/document/8326271)
